@@ -1,4 +1,0 @@
-wave = "Effects/Other/afvn_custom"
-inner_radius = 5
-outer_radius = 75
-gain = 8
