@@ -1,4 +1,0 @@
-wave = "Effects/Other/afvn_pleiku_show"
-inner_radius = 5
-outer_radius = 30
-gain = 4
