@@ -1,4 +1,0 @@
-wave = "Effects/Other/hooch_radio_chatter"
-inner_radius = 5
-outer_radius = 30
-gain = 1
