@@ -37,6 +37,8 @@ mount_vfs_texture_path	(current_mod_path ..  "/Textures/vwv_us_hangar")
 mount_vfs_texture_path	(current_mod_path ..  "/Textures/vwv_us_barracks")
 mount_vfs_texture_path	(current_mod_path ..  "/Textures/vwv_us_blu82")
 
+-- Weapons
+dofile(current_mod_path .."/Database/vwv_mgunsandshell.lua")
 -- Huts and more, excuse the misnomer
 dofile(current_mod_path .."/Database/vwv_indohuts.lua")
 -- Cargo
